@@ -2,6 +2,7 @@
  - Fix Makefile.PL fails with no '.' in @INC.
  - Update .travis.yml to reality.
  - Update Module::Install to 1.19 version.
+ - Update author name.
 
 0.03 2015-10-13T11:39:00+02:00
  - Add tests for constructor.
